--- a/links/refund.html
+++ b/links/refund.html
@@ -114,6 +114,13 @@
         <p class="mt-4"><strong>Phone:</strong> <span>+91 9442007477</span></p>
         <p><strong>Email:</strong> <span>hello@bigblue360.com</span></p>
       </div>
+      <div class="col-lg-2 col-6 social-links d-flex">
+          
+        <a href="https://www.instagram.com/orkaapps/"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.facebook.com/Orkastores01/"><i class="bi bi-instagram"></i></a>
+         <a href="https://www.linkedin.com/company/orkaapps/"><i class="bi bi-linkedin"></i></a>
+       </ul>
+     </div>
 
     </div>
   </div>
