--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
       <div class="container text-center" data-aos="fade-up" data-aos-delay="100">
         <div class="row justify-content-center">
           <div class="col-lg-8">
-            <h2>Welcome to Our Big<span style="color: #3498db;">Blue</span></h2>
-            <p>We are team of talented designers making websites with 7Commerce</p>
-            <a href="https://7commerce.in/" class="btn-get-started" target="_blank">Get Started</a>
+            <h2>Hey,We Are Big<span style="color: #3498db;">Blue</span></h2>
+            <p>We Design & Develop Softwares.</p>
+            <!-- <a href="https://.in/" class="btn-get-started" target="_blank">Get Started</a> -->
           </div>
         </div>
       </div>
